      have defined (per default this is contained in all roles)
    * New path back to the view after command exection with all
      checkboxes cleared
    * Added plugins to config module to make registration of default values
      possible for addons like mkeventd - reset to default values works now
      correctly even for multisite related settings
    * ADD: check_disk_smb pnp-template

    Event Console:
    * New rule feature: automatically delete event after actions
    * New filter for maximum services level (minimum already existed)

    Checks & Agents:
    * solaris_mem: New check for memory and swap for Solaris agent
    * New special agent agent_vsphere for monitoring ESX (VMware) Hosts
      via vSphere interface
    * new special agent agent_random for creating random monitoring data
    * New checks: windows_intel_bonding / windows_broadcom_bonding
    * cisco_qos: adhere qos-bandwidth policies
    * Implemented SAP monitoring based on the agent plugin mk_sap. This
      must be run on a linux host. It connects via RFC calls to SAP R/3
      systems to retrieve monitoring information for this or other machines.
    * sap.dialog: Monitors SAP dialog statistics like the response time
    * sap.value: Simply processes information provided by SAP to Nagios
    * openvpn_clients: new check for OpenVPN connections
    * check_disk_smb: WATO formalization for active check check_disk_smb
    * if.include: new configurable parameters for assumed input and output speed
    * cisco_qos: new param unit:    switches between bit/byte display
                 new param average: average the values over the given minute
                 new params post/drop can be configured via int and float
                 fixed incorrect worst state if different parameters exceed limit
    * logwatch.ec: Added optional spooling to the check to prevent dataloss
      when processing of current lines needs more time than max execution time